CORE-32664: Fixed VAT text font color and tablet spacing issues.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/alshaya-vat-certificate/component/_alshaya-vat-certificate.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/alshaya-vat-certificate/component/_alshaya-vat-certificate.scss
@@ -7,10 +7,6 @@
 
   @include breakpoint($only-tablet) {
     margin-bottom: 1.25rem;
-
-    html[lang=ar] & {
-      margin-top: -0.375rem;
-    }
   }
 
   @include breakpoint($tablet) {
@@ -30,9 +26,13 @@
     }
   }
 
-  .vat-link {
+  .vat-link,
+  span {
     color: $copyright_footer_paragraph;
     font-size: 0.6875rem;
+  }
+
+  .vat-link {
     text-decoration: underline;
   }
 }
